<resources>
    <string name="app_name">My Application-test</string>
    <string name="hello_world">Hello World!！</string>
    <string name="long_shortcut">long test</string>
    <string name="short_shortcut">test</string>
    <string name="second">这个是第二个页面</string>
    <string name="tv_weather">天气</string>
    <string name="button_two">转跳到第二个页面</string>
    <string name="button_02">获取网络数据</string>
    <string name="button_01">转跳第二页</string>
    <string name="tv_json">天气情况!</string>
    <string name="content">这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文这个是正文</string>
    <string name="todo">TODO</string>
    <string name="simple_calculator">简易计算器</string>
    <string name="num_calculate">num_calculate</string>
    <string name="result_text">0</string>
    <string name="CE_btn">CE</string>
    <string name="clear">C</string>
    <string name="plus">＋</string>
    <string name="minus">－</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="point">.</string>
    <string name="sqrt">sqrt</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="del">DEL</string>
    <string name="equal">=</string>
    <string name="password">&#160;&#160;验证码：></string>
    <string name="verifycode">验&#160;&#160;证&#160;&#160;码：</string>
    <string name="input_verifycode">请输入验证码</string>
    <string name="get_verifycode">获取验证码</string>
    <string name="login_password">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码：</string>
    <string name="input_password">请输入密码</string>
    <string name="forget_password">忘记密码</string>


</resources>