<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:padding="5dp"
    tools:context=".CalculatorActivity">

    <TextView
        android:id="@+id/simple_calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simple_calculator"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp"></TextView>

    <TextView
        android:id="@+id/num_calculate"
        android:layout_width="match_parent"
        android:layout_height="138dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
       android:textAlignment="gravity"
        android:gravity="right|bottom"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/result_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simple_calculator"
        app:layout_constraintVertical_bias="0.363"
        app:layout_constraintVertical_weight="3" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="right|bottom"
        android:background="@color/white"
        android:text="@string/result_text"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_calculate"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_weight="2"
        tools:ignore="MissingConstraints"></TextView>

    <Button
        android:id="@+id/CE_btn"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="2dp"

        android:text="@string/CE_btn"
        android:textSize="30dp"
        android:layout_marginBottom="5dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toStartOf="@+id/divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_text"
        tools:ignore="MissingConstraints"></Button>

    <Button
        android:id="@+id/divide"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="2dp"
        android:text="@string/divide"
        android:textSize="30dp"
        app:layout_constraintEnd_toStartOf="@+id/multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/CE_btn"
        app:layout_constraintTop_toBottomOf="@+id/result_text"
        tools:ignore="MissingConstraints"></Button>

    <Button
        android:id="@+id/multiply"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="2dp"
        android:text="@string/multiply"
        android:textSize="30dp"
        app:layout_constraintEnd_toStartOf="@+id/clear"
        app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/divide"
        app:layout_constraintTop_toBottomOf="@+id/result_text"
        tools:ignore="MissingConstraints"></Button>

    <Button
        android:id="@+id/clear"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="2dp"
        android:text="@string/clear"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/multiply"
        app:layout_constraintTop_toBottomOf="@+id/result_text"
        tools:ignore="MissingConstraints"></Button>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />


    <Button
        android:id="@+id/seven"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="2dp"
        android:text="@string/seven"
        android:textSize="30dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toStartOf="@+id/eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CE_btn"
        tools:ignore="MissingConstraints"></Button>

    <Button
        android:id="@+id/eight"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="2dp"
        android:text="@string/eight"
        android:textSize="30dp"
        app:layout_constraintEnd_toStartOf="@+id/nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toBottomOf="@+id/CE_btn"
        tools:ignore="MissingConstraints"></Button>

    <Button
        android:id="@+id/nine"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="2dp"
        android:text="@string/nine"
        android:textSize="30dp"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/eight"
        app:layout_constraintTop_toBottomOf="@+id/CE_btn"
        tools:ignore="MissingConstraints"></Button>

    <Button
        android:id="@+id/plus"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="2dp"
        android:text="@string/plus"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/nine"
        app:layout_constraintTop_toBottomOf="@+id/CE_btn"
        tools:ignore="MissingConstraints"></Button>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.58" />
    <Button
        android:id="@+id/four"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="2dp"
        android:text="@string/four"
        android:textSize="30dp"
        app:layout_constraintEnd_toStartOf="@+id/five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven"
        tools:ignore="MissingConstraints"></Button>

    <Button
        android:id="@+id/five"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="2dp"
        android:layout_marginStart="5dp"
        android:text="@string/five"
        android:textSize="30dp"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/four"
        app:layout_constraintTop_toBottomOf="@+id/seven"
        tools:ignore="MissingConstraints"></Button>

    <Button
        android:id="@+id/six"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="2dp"
        android:text="@string/six"
        android:textSize="30dp"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/seven"
        tools:ignore="MissingConstraints"></Button>

    <Button
        android:id="@+id/minus"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="2dp"
        android:text="@string/minus"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/six"
        app:layout_constraintTop_toBottomOf="@+id/seven"
        tools:ignore="MissingConstraints"></Button>



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />

    <Button
        android:id="@+id/one"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="2dp"
        android:text="@string/one"
        android:textSize="30dp"
        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four"
        tools:ignore="MissingConstraints"></Button>

    <Button
        android:id="@+id/two"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="2dp"
        android:layout_marginStart="5dp"
        android:text="@string/two"
        android:textSize="30dp"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/four"
        tools:ignore="MissingConstraints"></Button>

    <Button
        android:id="@+id/three"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="2dp"
        android:text="@string/three"
        android:textSize="30dp"
        app:layout_constraintEnd_toStartOf="@+id/sqrt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@+id/four"
        tools:ignore="MissingConstraints"></Button>

    <Button
        android:id="@+id/sqrt"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="2dp"
        android:drawableLeft="@drawable/kaifang"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/three"
        app:layout_constraintTop_toBottomOf="@+id/four"
        tools:ignore="MissingConstraints"></Button>


    <Button
        android:id="@+id/del"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="2dp"
        android:text="@string/del"
        android:textSize="30dp"
        app:layout_constraintEnd_toStartOf="@+id/zero"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one"
         tools:ignore="MissingConstraints"></Button>

    <Button
        android:id="@+id/zero"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="2dp"
        android:layout_marginStart="5dp"
        android:text="@string/zero"
        android:textSize="30dp"
        app:layout_constraintEnd_toStartOf="@+id/point"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/del"
        app:layout_constraintTop_toBottomOf="@+id/one"
         tools:ignore="MissingConstraints"></Button>

    <Button
        android:id="@+id/point"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="2dp"
        android:text="@string/point"
        android:textSize="30dp"
        app:layout_constraintEnd_toStartOf="@+id/equal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/zero"
        app:layout_constraintTop_toBottomOf="@+id/one"
        tools:ignore="MissingConstraints"></Button>

    <Button
        android:id="@+id/equal"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="2dp"
        android:text="@string/equal"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/point"
        app:layout_constraintTop_toBottomOf="@+id/one"
        tools:ignore="MissingConstraints"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>