<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv"
        android:textIsSelectable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@+id/tv_json"

        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="xml设置文件颜色!"
        android:textColor="#ff0000"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/tv3"
        app:layout_constraintTop_toBottomOf="@+id/tv" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/design_default_color_primary"
        android:text="背景设置为绿色!"
        android:textColor="#ff0000"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/tv" />

    <TextView
        android:id="@+id/tv_json"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_margin="10dp"
        android:background="@color/design_dark_default_color_on_background"
        android:scrollbars="vertical"
        android:text="@string/tv_json"
        android:textColor="#000000"
        android:textIsSelectable="true"
        android:textSize="17sp"

        app:layout_constraintTop_toBottomOf="@+id/tv_code" />

    <Button
        android:id="@+id/button_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/button_01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv"
        app:layout_constraintVertical_bias="0.504" />

    <Button
        android:id="@+id/button_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/button_02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_04"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toEndOf="@+id/button_01"
        app:layout_constraintTop_toBottomOf="@+id/tv"
        app:layout_constraintVertical_bias="0.504" />



    <Button
        android:id="@+id/button_03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="100dp"
        android:onClick="startFloatingButtonService"
        android:text="悬浮按钮"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_04"
        app:layout_constraintVertical_bias="0.0" />
    <Button
        android:id="@+id/button_04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="获取文本数据"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toEndOf="@+id/button_01"
        app:layout_constraintTop_toBottomOf="@+id/tv"
        app:layout_constraintVertical_bias="0.504" />

    <Button
        android:id="@+id/button_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="查看剪贴板"
        app:layout_constraintTop_toBottomOf="@+id/button_01"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="正则匹配"
        app:layout_constraintStart_toEndOf="@+id/button_05"
        app:layout_constraintTop_toBottomOf="@+id/button_01"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="38dp"
        android:background="#00ffff"
        android:text="剪贴板"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_json"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="100dp"-->
    <!--        android:background="#00ffff"-->
    <!--        android:text="视图宽度采用match_parent定义,距离顶部30dp"-->
    <!--        android:textColor="#000000"-->
    <!--        android:textSize="17sp"-->
    <!--        android:layout_marginTop="30dp"-->
    <!--        tools:ignore="MissingConstraints" />-->
</androidx.constraintlayout.widget.ConstraintLayout>